Add type parameter to Unit and Measure